@@ -173,7 +173,7 @@ setMethod('fmle',
   function(object, start, method='L-BFGS-B', fixed=list(),
     control=list(trace=1), lower=rep(-Inf, dim(params(object))[1]),
     upper=rep(Inf, dim(params(object))[1]), seq.iter=TRUE, autoParscale=FALSE,
-    tiny_number=1e-6, relAutoParscale=TRUE, ...)
+    tiny_number=1e-6, relAutoParscale=FALSE, ...)
   {
     # TODO Check with FL
     args <- list(...)
